# YHODA

./: .env.example  .gitignore  .pre-commit-config.yaml  .prefectignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  alembic.ini  prefect.yaml  pyproject.toml  release-please-config.json  repo-setup-plan.md
.github/workflows/: ci.yml  release-please.yml
docs/: entity-relationship-diagram.md  tutorial-pgadmin.md
src/yhovi_pipeline/: __init__.py  config.py
src/yhovi_pipeline/db/: __init__.py  models.py
src/yhovi_pipeline/db/migrations/: env.py
src/yhovi_pipeline/db/migrations/versions/: 20260304_1406_fb50d024ea2b_initial_schema.py  20260421_add_geography_breakdown_forecast.py  (+1 more)
src/yhovi_pipeline/flows/: __init__.py  orchestrator.py
src/yhovi_pipeline/flows/economy/: __init__.py  business_demography.py  claimant_count.py  earnings.py  employment_jobs.py  gdp_gva.py
src/yhovi_pipeline/flows/environment/: __init__.py  air_quality.py  energy_consumption.py
src/yhovi_pipeline/flows/society/: __init__.py  crime_statistics.py  deprivation_imd.py  digital_inclusion.py  education_attainment.py  health_outcomes.py  housing_tenure.py  physical_activity.py
src/yhovi_pipeline/tasks/: __init__.py
src/yhovi_pipeline/tasks/extract/: __init__.py  beis.py  defra.py  dwp.py  fingertips.py  nomis.py  ofcom.py  ons.py  sport_england.py
src/yhovi_pipeline/tasks/load/: __init__.py  database.py  sql_server.py
src/yhovi_pipeline/tasks/transform/: __init__.py  geo.py  normalise.py  validate.py
src/yhovi_pipeline/utils/: __init__.py  geo_lookups.py  load_csv.py  load_industry.py  load_jobs.py  load_neighbourhoods.py  logging.py  metadata.py  seed_geo_lookup.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_normalise.py
